Fix h2 wrapping to next line

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -7,7 +7,7 @@ header {
   box-shadow: 0.5em 0.5em 1em 0 black(0.125);
   border-radius: 5em;
   padding: 2em 2em 3em 1.5em;
-  width: 25.75rem;
+  width: 26rem;
   color: white;
   text-align: left;
 
